fix notification issues (showing / hiding)

FIXED-IN: 4.11.1
REVIEW: 112320
BUG: 323092